# mcp-aemps

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  claude_desktop_config.json  docker  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  server.json
.claude-plugin/: .mcp.json  plugin.json
.claude-plugin/skills/aemps-buscar/: SKILL.md
.claude-plugin/skills/aemps-ficha/: SKILL.md
.claude-plugin/skills/aemps-vigilancia/: SKILL.md
.docker-mcp-registry/: README.md  server.yaml  tools.json  verify.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-mcp-registry.yml  docker.yml  npm.yml  release.yml
app/: _mcp_constants_en.py  _mcp_constants_es.py  _prompts_en.py  _prompts_es.py  auth.py  cache.py  cima_client.py  cli.py  completions.py  config.py  content_links.py  dependencies.py  docs_utils.py  etag_store.py  factory.py  helpers.py  installers.py  lifespan.py  logging_setup.py  mcp_aemps_server.py  mcp_constants.py  metrics.py  migration_check.py  otel_setup.py  prompts.py  rate_limits.py  resources.py  runtime_state.py  startup.py  stdio_server.py  tool_hooks.py  version_check.py
app/core/: __init__.py  base.py  documentos.py  medicamentos.py  schemas.py  vigilancia.py
app/routes/: datos_locales.py  documentos.py  medicamentos.py  presentaciones.py  vigilancia.py
mcpb/: manifest.json  pyproject.toml
mcpb/server/: main.py
npm/: .npmignore  LICENSE  README.md  package.json
scripts/: build_mcpb.sh
tests/: inspector_compliance.sh  test_cima_client.py  test_etag_store.py  test_i18n_and_auth.py  test_installers.py  test_migration_check.py  test_prompts.py  test_rate_limits.py  test_resources.py  test_runtime_state.py  test_smoke.py  test_stdio_server.py  test_tool_hooks.py  test_version_check.py
