[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcp_aemps"
version = "0.1.0"
description = "Servidor FastAPI-MCP para AEMPS CIMA + CLI de arranque / Docker"
authors = ["Román Pérez Dumpert <roman.p98@gmail.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.116.2"
fastapi-mcp = "0.4.0"
httpx = "0.28.1"
uvicorn = "0.35.0"
typer = "0.17.4"
pillow = "11.3.0"
xlrd = "2.0.2"
openpyxl = "3.1.5"
aioredis = "1.3.1"
fastapi-cache2 = "0.2.2"
fastapi-limiter = "0.1.6"
passlib = { version = "1.7.4", extras = ["bcrypt"] }
pyjwt = { version = ">=2.10,<3.0", extras = ["crypto"] }
PyMuPDF = "1.26.4"
opentelemetry-api = "1.37.0"
opentelemetry-sdk = "1.37.0"
opentelemetry-instrumentation-fastapi = "0.58b0"
opentelemetry-exporter-otlp = "1.37.0"
opentelemetry-instrumentation-httpx = "0.58b0"
opentelemetry-instrumentation-redis = "0.58b0"
opentelemetry-instrumentation-logging = "0.58b0"
opentelemetry-instrumentation-aiohttp-client = "0.58b0"
opentelemetry-propagator-b3 = "1.37.0"
watchfiles = "1.1.0"

[tool.poetry.scripts]
mcp_aemps = "app.cli:cli"