[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mcp-aemps"
version = "0.1.0"
description = "Open-source MCP server for the Spanish AEMPS CIMA pharmaceutical registry"
authors = [
  { name = "Román Pérez Dumpert", email = "roman.p98@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["mcp", "aemps", "cima", "pharmaceutical", "healthcare", "regulatory", "fastapi", "claude", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "fastapi==0.116.2",
  "fastapi-mcp==0.4.0",
  "httpx==0.28.1",
  "uvicorn[standard]==0.35.0",
  "typer==0.17.4",
  "rich>=13.0",
  "cachetools>=5.3",
  "limits>=3.10",
  "python-dateutil>=2.9",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]

[project.urls]
Homepage = "https://github.com/romanpert/mcp-aemps"
Repository = "https://github.com/romanpert/mcp-aemps"
Documentation = "https://github.com/romanpert/mcp-aemps#readme"
"Bug Tracker" = "https://github.com/romanpert/mcp-aemps/issues"
Changelog = "https://github.com/romanpert/mcp-aemps/blob/main/CHANGELOG.md"

[project.scripts]
mcp_aemps = "app.cli:cli"
mcp-aemps = "app.cli:cli"

[tool.poetry]
packages = [
  { include = "app" }
]
exclude = [
  "app/mcp_aemps.json",
  "app/**/__pycache__",
  "**/.pytest_cache",
]
